--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                    <p>Pin code-682506</p>
 				
 
-                               <img  src="C:\Users\Student\Downloads\add.png" style="width:10%;height:5%;padding-top:30px">
+                               <img  src="https://github.com/jasnamaria/resume/raw/master/add.png" style="width:10%;height:5%;padding-top:30px">
 			      <p style="padding-top:30px"><b>ABOUT ME</b></p>
 		
 				<p>Nationality: INDIAN</p>
