--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<p>Place of Issue: Cochin, INDIA.</p>
 				
 
-				<img  src="C:\Users\Jasna\Desktop\html\prof.png" style="width:10%;height:5%;padding-top:30px">
+				<img  src="https://github.com/jasnamaria/resume/blob/master/prof.png" style="width:10%;height:5%;padding-top:30px">
 				<p style="padding-top:30px"><b>PROFFESSIONAL TRAINING</b></p>
 				<p>Java </p>
 
