--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
 
-	<div class="col-lg-12" style="background-color: LightSeaGreen ;width:70%;height:200%">
+	<div class="col-lg-12" style="background-color:LightPink   ;width:70%;height:200%">
 
 			
 
