--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<div class="col-lg-12" style="background-color:gold;width:30%;height:200%">
 
- 		<img  src="https://github.com/jasnamaria/resume/raw/master/person.jpg" alt="Avatar" style="width:40%;height:20%;margin-left:125;padding-top:20px"><br>
+ 		<img  src="https://github.com/jasnamaria/resume/raw/master/person.jpg" alt="Avatar" style="width:40%;height:20%; border-radius: 50%;margin-left:125;padding-top:20px"><br>
 
 			<center>
 				<img  src="https://github.com/jasnamaria/resume/raw/master/loction.png" style="width:10%;height:5%;padding-top:30px"><br><br>
